@@ -1,3 +1,4 @@
+Build a Fraction: Shapes: Rotate when closest match site changed for fractions > 1
 Build a Fraction: Shapes: Make pie piece stay near mouse when grabbed from toolbox
 Build a Fraction: Shapes: Fixed: Bar shapes not centered vertically in toolbox any more
 Build a Fraction: Shapes: Fixed: Pieces don't line up properly with the containers
